[package]
name = "seal-crypto-wrapper"
version = "0.1.2"
edition = "2024"

[dependencies]
seal-crypto = { version = "0.1.2", default-features = false, features = ["std", "serde", "secrecy"]}
bincode = "2.0.1"
serde = "1.0.219"
rand = "0.9.1"
thiserror = "2.0.12"

[features]
default = []

symmetric = ["seal-crypto/aes-gcm", "seal-crypto/chacha20-poly1305"]
asymmetric-kem = ["seal-crypto/rsa", "seal-crypto/kyber"]
asymmetric-signature = ["seal-crypto/dilithium", "seal-crypto/ecc"]
asymmetric-key-agreement = ["seal-crypto/ecdh"]
asymmetric = ["asymmetric-kem", "asymmetric-signature", "asymmetric-key-agreement"]
kdf = ["seal-crypto/kdf"]
xof = ["seal-crypto/xof"]

kem-avx2 = ["seal-crypto/kyber-avx2", "asymmetric-kem"]
signature-avx2 = ["seal-crypto/dilithium-avx2", "asymmetric-signature"]

sha2-asm = ["seal-crypto/sha2-asm"]
xof-asm = ["seal-crypto/sha3-asm"]

full = ["symmetric", "asymmetric", "kdf", "xof"]

[[example]]
name = "kem"
required-features = ["asymmetric-kem"]

[[example]]
name = "signature"
required-features = ["asymmetric-signature"]

[[example]]
name = "key_agreement"
required-features = ["asymmetric-key-agreement"]

[[example]]
name = "kdf_key"
required-features = ["kdf"]

[[example]]
name = "kdf_passwd"
required-features = ["kdf"]

[[example]]
name = "xof"
required-features = ["xof"]

[[example]]
name = "symmetric"
required-features = ["symmetric"]