[package]
name = "seal-crypto-wrapper"
version = "0.1.2"
edition = "2024"
description = "A high-level, misuse-resistant cryptographic wrapper library for Rust, binding algorithms to keys to ensure type safety."
license = "MPL-2.0"
repository = "https://github.com/ShaoG-R/seal-crypto-wrapper"
homepage = "https://github.com/ShaoG-R/seal-crypto-wrapper"
documentation = "https://docs.rs/seal-crypto-wrapper"
keywords = ["crypto", "wrapper", "seal", "kyber", "dilithium"]
categories = ["cryptography"]

[package.metadata.docs.rs]
features = ["full"]

[dependencies]
seal-crypto = { version = "0.1.5", default-features = false, features = ["std", "serde", "secrecy", "hmac"]}
bincode = "2.0.1"
serde = "1.0.219"
rand = "0.9.2"
thiserror = "2.0.12"

[dev-dependencies]
serde_json = "1.0.141"

[features]
default = []

aead = ["seal-crypto/aes-gcm", "seal-crypto/chacha20-poly1305"]
asymmetric-kem = ["seal-crypto/rsa", "seal-crypto/kyber"]
asymmetric-signature = ["seal-crypto/dilithium", "seal-crypto/ecc"]
asymmetric-key-agreement = ["seal-crypto/ecdh"]
asymmetric = ["asymmetric-kem", "asymmetric-signature", "asymmetric-key-agreement"]
kdf = ["seal-crypto/kdf"]
xof = ["seal-crypto/xof"]

kem-avx2 = ["seal-crypto/kyber-avx2", "asymmetric-kem"]
signature-avx2 = ["seal-crypto/dilithium-avx2", "asymmetric-signature"]

sha2-asm = ["seal-crypto/sha2-asm"]
xof-asm = ["seal-crypto/sha3-asm"]

full = ["aead", "asymmetric", "kdf", "xof"]

[[example]]
name = "kem"
required-features = ["asymmetric-kem"]

[[example]]
name = "signature"
required-features = ["asymmetric-signature"]

[[example]]
name = "key_agreement"
required-features = ["asymmetric-key-agreement"]

[[example]]
name = "kdf_key"
required-features = ["kdf"]

[[example]]
name = "kdf_passwd"
required-features = ["kdf"]

[[example]]
name = "xof"
required-features = ["xof"]

[[example]]
name = "aead"
required-features = ["aead"]